--- a/src/App.css
+++ b/src/App.css
@@ -870,7 +870,7 @@ header .container .menu .btn-login {
   padding-top: 80px;
   padding-bottom: 80px;
 }
-.newsletter .background-wavy-lines {
+.newsletter .wavylines {
   position: absolute;
   bottom: 50px;
   right: 0;
@@ -951,7 +951,7 @@ footer .top .block a {
 footer .top .block a:hover {
   color: #7c7c7c;
 }
-footer .wigly_lines_right {
+footer .wiglylinesright {
   align-self: flex-end;
   color: #707070;
 }
@@ -1145,46 +1145,3 @@ footer .bottom .socialmedia-bar a:hover {
   width: 100%;
   height: 600px;
 }
-
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
