--- a/src/App.css
+++ b/src/App.css
@@ -1145,3 +1145,170 @@ footer .bottom .socialmedia-bar a:hover {
   width: 100%;
   height: 600px;
 }
+
+
+.lets_connect {
+  background-color: #F0EFE9;
+  position: relative;
+  z-index: 0;
+}
+@media (max-width: 991px) {
+  .lets_connect .background-lines {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  .lets_connect .background-lines {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+  }
+}
+.lets_connect .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.lets_connect .container .menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+.lets_connect .container .menu a {
+  margin-right: 10px;
+  display: block;
+  text-decoration: none;
+  color: #191919;
+}
+@media (min-width: 768px) {
+  .lets_connect .container .menu a {
+    display: inline-block;
+    margin-right: 10px;
+  }
+}
+.lets_connect .container .content {
+  padding-bottom: 40px;
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .lets_connect .container .content {
+    text-align: left;
+  }
+}
+.lets_connect .container .content h1 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+}
+@media (min-width: 768px) {
+  .lets_connect .container .content h1 {
+    font-size: 70px;
+  }
+}
+@media (min-width: 1400px) {
+  .lets_connect .container .content h1 {
+    font-size: 86px;
+  }
+}
+.lets_connect .container img {
+  display: none;
+  margin-right: -50px;
+}
+@media (min-width: 1200px) {
+  .lets_connect .container img {
+    display: block;
+  }
+}
+
+.info_box .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.info_box .container .box {
+  display: flex;
+  border: 1px solid #b1b0b0;
+  padding: 50px;
+  padding-right: 100px;
+}
+.info_box .container .box i {
+  float: left;
+  font-size: 25px;
+  height: 50px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  padding: 15px;
+}
+.info_box .container .box .info {
+  display: block;
+  margin-left: 20px;
+}
+.info_box .container .box .info h3 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 22px;
+  text-align: center;
+}
+@media (min-width: 992px) {
+  .info_box .container .box .info h3 {
+    text-align: left;
+  }
+}
+.info_box .container .box .info p {
+  margin: 0;
+}
+
+.form_section .container {
+  padding: 100px;
+  background-color: #F0EFE9;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 180px;
+}
+.form_section .container .section-title {
+  text-align: center;
+  padding: 50px 300px 50px 300px;
+}
+.form_section .container .section-title h2 {
+  color: #191919;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+}
+.form_section .container form {
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+.form_section .container form .mb-3 input {
+  width: 100%;
+  border-radius: 25px;
+  border: none;
+}
+.form_section .container form .mb-3 textarea {
+  border: none;
+  resize: none;
+  height: 150px;
+  width: 100%;
+  border-radius: 25px;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+.form_section .container .btn-yellow {
+  height: auto;
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+  margin-top: 40px;
+}
+
+.map iframe {
+  width: 100%;
+  height: 600px;
+}
